--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -23,5 +23,6 @@
   "seeMoreDetails": "See more details",
   "error": "Error: ",
   "errorInfo": "ErrorInfo: ",
-  "loading": "Loading..."
+  "loading": "Loading...",
+  "copyrights": "@Copyright Naveen"
 }
